tests/atest/invalid_library/test_data/LibraryWithArgs.py
class LibraryWithArgs:
    def __init__(self, arg):
        self.arg = arg
